# Line-Editor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  display.cpp  display.hpp  editing.cpp  editing.hpp  lineedit.1  lineedit.cpp  lineedit.hpp
src/: display.cpp  display.hpp  editing.cpp  lineedit.cpp  lineedit.hpp
src/display/: Message.cpp  Message.h  Utilities.h  Window.cpp  Window.h
src/display/windows/: ConsoleWindow.cpp  ConsoleWindow.h  TextWindow.cpp  TextWindow.h
